# robot-project

Manipulator/my_xarm_lite6/: README.md
Manipulator/my_xarm_lite6/documentation/documentation/: Ufactory_Lite6_Robot_Setup.md
Manipulator/my_xarm_lite6/my_demo/launch/: environment.launch
Manipulator/my_xarm_lite6/my_lite6_description/meshes/: schroevendraaier.STL  transportband.STL
Manipulator/my_xarm_lite6/my_lite6_moveit_config/config/: kinematics.yaml  lite6_robot.srdf
Manipulator/my_xarm_lite6/my_lite6_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  moveit.rviz
Manipulator/robot_arm_pkg/: CMakeLists.txt
Manipulator/robot_arm_pkg/movelt_setup/: CMakeLists.txt  package.xml
Manipulator/robot_arm_pkg/movelt_setup/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  (+5 more)
Manipulator/robot_arm_pkg/scripts/: move_arm.py  move_arm1.2.py  sorteer_server.py  tf_test_bestand.py
rossem_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
rossem_ws/src/camera/: package.xml
rossem_ws/src/hoofdprogramma/: CMakeLists.txt
rossem_ws/src/hoofdprogramma/launch/: hoofdprogramma.launch
rossem_ws/src/hoofdprogramma/scripts/: hoofdprogramma.py  omrekenen.py
rossem_ws/src/robot_hmi/: CMakeLists.txt  package.xml
rossem_ws/src/robot_hmi/launch/: start_hmi.launch
rossem_ws/src/robot_hmi/scripts/: hmi_node.py  robot_sim.py  transportband_node.py
transportband/transportband/: CMakeLists.txt
transportband/transportband/scripts/: arduino_listener.py
(+382 files in other folders)
