<?xml version="1.0"?>
<package format="2">
  <name>robot_hmi</name>
  <version>0.0.1</version>
  <description>A simple HMI for robot using ROS 1</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>